Fixed change text align in the view of sender

--- a/res/css/views/rooms/_EventTile.scss
+++ b/res/css/views/rooms/_EventTile.scss
@@ -24,10 +24,12 @@ limitations under the License.
 
 .mx_EventTile_myMsg:not(.mx_EventTile_info) {
   padding-top: 0;
+    float : right;
+    max-width: available;
 
   & .mx_EventTile_line {
     margin: 0;
-    text-align: right;
+    text-align: left;
     margin-left: 110px;
   }
   & .mx_SenderProfile {
@@ -48,7 +50,8 @@ limitations under the License.
   }
 
   & .mx_EventTile_readAvatars {
-    // top: 7px;
+     margin-top: 20px;
+      margin-right: 20px;
   }
 
   & .mx_ReactionsRow {
